Initial commit: SENSE AI health dashboard

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit
-opencv-python-headless
-numpy
-pandas
+streamlit==1.32.0
+opencv-python==4.9.0.80
+numpy==1.26.4
+pandas==2.2.1
+plotly==5.19.0
+gTTS==2.5.1
