Test cron every 2 minutes

--- a/.github/workflows/stay_awake.yml
+++ b/.github/workflows/stay_awake.yml
@@ -2,7 +2,10 @@ name: Streamlit Keep Alive
 
 on:
   schedule:
-    - cron: "0 */6 * * *"   # every 6 hours
+#    - cron: "0 */6 * * *"   # every 6 hours
+     - cron: "*/5 * * * *"
+
+
   workflow_dispatch:
 
 jobs:
