--- a/.github/workflows/stay_awake.yml
+++ b/.github/workflows/stay_awake.yml
@@ -2,26 +2,19 @@ name: Streamlit Keep Alive
 
 on:
   schedule:
-#    - cron: "0 */6 * * *"   # every 6 hours
-     - cron: "*/5 * * * *"
-
-
+    - cron: "*/2 * * * *"
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      - name: Install dependencies
-        run: pip install requests
+      - run: pip install requests
 
-      - name: Ping Streamlit app
-        run: python wake_up.py
+      - run: python wake_up.py
