--- a/.github/workflows/stay_awake.yml
+++ b/.github/workflows/stay_awake.yml
@@ -2,19 +2,24 @@ name: Streamlit Keep Alive
 
 on:
   schedule:
-    - cron: "*/2 * * * *"
+    - cron: "*/2 * * * *"  # every 2 minutes
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      - run: pip install requests
+      - name: Install dependencies
+        run: pip install requests
 
-      - run: python wake_up.py
+      - name: Wake up Streamlit app
+        run: python wake_up.py
