--- a/.github/workflows/stay_awake.yml
+++ b/.github/workflows/stay_awake.yml
@@ -2,24 +2,39 @@ name: Streamlit Keep Alive
 
 on:
   schedule:
-    - cron: "*/2 * * * *"  # every 2 minutes
+    - cron: "*/2 * * * *"      # keep-alive ping
+    - cron: "0 0 * * *"        # dummy commit daily at 00:00 UTC
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      - name: Install dependencies
-        run: pip install requests
+      - run: pip install requests
+      - run: python wake_up.py
 
-      - name: Wake up Streamlit app
-        run: python wake_up.py
+  daily-commit:
+    if: github.event.schedule == '0 0 * * *'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update timestamp
+        run: |
+          echo "Last active: $(date)" > keep_alive.txt
+
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add keep_alive.txt
+          git commit -m "Daily keep-alive commit $(date)" || echo "No changes"
+          git push
